listing flickering correction

--- a/src/Advanced.css
+++ b/src/Advanced.css
@@ -474,3 +474,23 @@ p.effectiveDate {
   pointer-events: none;
   outline: none; /* Remove focus outlines */
 }
+
+/* withQuerystringResults.css */
+
+.fade-enter {
+  opacity: 0;
+}
+
+.fade-enter-active {
+  opacity: 1;
+  transition: opacity 500ms ease-in-out;
+}
+
+.fade-exit {
+  opacity: 1;
+}
+
+.fade-exit-active {
+  opacity: 0;
+  transition: opacity 500ms ease-in-out;
+}
